# AdventOfCode2021

./: .gitignore  Cargo.toml
framework/: Cargo.toml
framework/src/: lib.rs
problems/problem1/: Cargo.toml
problems/problem1/src/: lib.rs
problems/problem2/: Cargo.toml
problems/problem2/src/: lib.rs
problems/problem3/: Cargo.toml
problems/problem3/src/: lib.rs
problems/solver/: Cargo.toml
problems/solver/src/: main.rs
solver/: Cargo.toml
solver/src/: main.rs
src/: framework.rs  main.rs  util.rs
src/problems/: mod.rs  problem1.rs  problem10.rs  problem11.rs  problem12.rs  problem13.rs  problem14.rs  problem2.rs  problem3.rs  problem4.rs  problem5.rs  problem6.rs  problem7.rs  problem8.rs  problem9.rs
