[package]
name = "solver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
framework = { path = "../framework" }
problem2 = { path = "../problems/problem2" }
problem3 = { path = "../problems/problem3" }

clap = "^2"
once_cell = "^1"
color-backtrace = "^0"
